Bug 98321 - FILEOPEN: RTF checkbox font type wrong and size too big
Summary: FILEOPEN: RTF checkbox font type wrong and size too big
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords: filter:rtf
: 96297 101799 (view as bug list)
Depends on: 96326
Blocks: RTF RTF-Fields 98199
  Show dependency treegraph
 
Reported: 2016-03-01 19:59 UTC by Ari Latvala
Modified: 2024-01-16 10:28 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
PDF version showing the expected layout (37.06 KB, application/pdf)
2016-03-01 19:59 UTC, Ari Latvala
Details
Screenshot showing differenciens between rtf, doc and pdf (268.24 KB, image/jpeg)
2016-03-01 20:00 UTC, Ari Latvala
Details
RTF version having too big checkboxes (1.36 MB, application/rtf)
2016-03-01 20:02 UTC, Ari Latvala
Details
LO 5.2 RTF & DOC vs PDF screenshot (215.22 KB, image/jpeg)
2016-03-02 21:59 UTC, Ari Latvala
Details
Compare PDF vs DOC vs RTF at LO 5.3.2 screenshot (53.60 KB, image/jpeg)
2017-04-26 09:31 UTC, Ari Latvala
Details
checkboxes.JPG screenshot comparing DOC and RTF (184.69 KB, image/jpeg)
2017-07-30 08:50 UTC, Ari Latvala
Details
DOC -version having correct checkbox size (61.50 KB, application/msword)
2017-07-30 08:51 UTC, Ari Latvala
Details
RTF -version having too big point size for checkboxes (157.23 KB, application/rtf)
2017-07-30 08:51 UTC, Ari Latvala
Details
LO 7.1 vs Word checkbox size difference JPG picture (51.45 KB, image/jpeg)
2021-02-13 12:42 UTC, Ari Latvala
Details
Simple reproducer as RTF, with copy-pasted checkboxes (47.58 KB, application/rtf)
2023-12-01 12:58 UTC, Gabor Kelemen (Collabora)
Details
The Word-made and LO-made PDFs of the reproducer document compared in DiffPDF (66.51 KB, image/png)
2023-12-01 13:00 UTC, Gabor Kelemen (Collabora)
Details
How the Word/Writer PDF exports look in DiffPDF (76.81 KB, image/png)
2024-01-16 10:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ari Latvala 2016-03-01 19:59:22 UTC
Created attachment 123121 [details]
PDF version showing the expected layout

+++ This bug was initially created as a clone of Bug #96326 +++

LibreOffice 5.1.0.3 running on Windows 7 64-bit.

RTF version of document as an example: "Kotimaan näyttelyilmoittaumislomake" attached, also available at site http://www.kissaliitto.fi/lomakkeet/nayttely

The main problem on those checkboxes is that both DOC and RTF make them bigger than on the PDF version leading to incorrect layout, i.e. text on two rows instead of one. Just look at the screenshot attachment, I've marked with red arrow that "cm" moving to next row because of that too big checkbox problem.

Attached RTF and PDF versions of the same document for comparison as well as a screenshot showing RTF, PDF and DOC side by side.
Comment 1 Ari Latvala 2016-03-01 20:00:17 UTC
Created attachment 123122 [details]
Screenshot showing differenciens between rtf, doc and pdf
Comment 2 Ari Latvala 2016-03-01 20:02:13 UTC
Created attachment 123123 [details]
RTF version having too big checkboxes
Comment 3 tommy27 2016-03-02 06:00:06 UTC
Bug 96326 has been fixed by Miklos
can you retest with recent 5.2.0 daily builds and tell if we can close this one too?
Comment 4 Ari Latvala 2016-03-02 21:59:18 UTC
Created attachment 123162 [details]
LO 5.2 RTF & DOC vs PDF screenshot

Screenshot of the same document's RTF and DOC versions at LibreOffice 5.2 nightly 2.3.2016 on Windows 7 SP1 64-bit vs. PDF version showing too big checkboxes on RTF and DOC leading to incorrect layout pointed by red arrows. Red boxes located beside and under selection boxes are identical size with the RTF and DOC version and showing those to be bigger thant on PDF.

Also several other layout problems showing on that screenshot:
- RTF version having too narrow table (grey box) at the bottom of the page causing text to split on two lines, when compared to one line at PDF and DOC
- DOC version having incorrect table cell border spacing leading to all sort of layout problems, compare to correct layout on RTF and PDF. See red arrows.
- RTF has incorrect horizontal alignment for some tables moving them too much to left when compared to PDF and DOC
- DOC version incorrect vertical alignment on some of those boxes at the bottom of the screen leading to overlapping and unreadable mess.
Comment 5 Ari Latvala 2016-03-02 22:02:32 UTC
(In reply to tommy27 from comment #3)
> Bug 96326 has been fixed by Miklos
> can you retest with recent 5.2.0 daily builds and tell if we can close this
> one too?

Checkboxes still too big on RTF and DOC, when compared to PDF version. Also LO 5.2 nightly still having several other layout problems on that document's RTF and DOC versions. Explanations on the description for the new screenshot showing RTF. PDF and DOC side by side at the same zoom level.
Comment 6 Robinson Tryon (qubit) 2016-03-06 17:54:30 UTC
Testing on Ubuntu 14.04 +
LO 5.2.0.0.alpha0+ (2016-02-24_23:58:47)

(In reply to Ari Latvala from comment #5)
> Checkboxes still too big on RTF and DOC, when compared to PDF version.

As with bug 98199, I see the line-wrapping in LO when the RTF (attachment 123123 [details]) is opened, but the checkboxes appears to be *checked*, whereas the example rendering (attachment 123121 [details]) has unchecked checkboxes.
Regardless of additional bugs in the document, the checkbox appears to be displayed larger, so
Status -> NEW

(In reply to Ari Latvala from comment #0)
> The main problem on those checkboxes is that both DOC and RTF make them
> bigger than on the PDF version

When you say "the PDF version", do you mean the PDF generated by MSO or by LO? Using LO to export the RTF to PDF doesn't seem to change the size of the checkbox.

(In reply to Ari Latvala from comment #4)
> Also several other layout problems showing on that screenshot:
> - [...]

One problem per bug, please. Feel free to cross-reference them, but short and sweet bugs means that QA can easily test each problem.
Comment 7 Ari Latvala 2016-03-07 12:50:56 UTC
> When you say "the PDF version", do you mean the PDF generated by MSO or by
> LO? Using LO to export the RTF to PDF doesn't seem to change the size of the
> checkbox.

I mean, when compared to the PDF version, which is available on the web site http://www.kissaliitto.fi/lomakkeet/nayttely

Also Microsoft Word viewer 2003 shows checkboxes correctly, when looking at RTF version.
Comment 8 m_a_riosv 2016-08-30 21:12:16 UTC
*** Bug 101799 has been marked as a duplicate of this bug. ***
Comment 9 Ari Latvala 2017-04-26 09:31:14 UTC
Created attachment 132844 [details]
Compare PDF vs DOC vs RTF at LO 5.3.2 screenshot

At this screenshot taken with 200% view too big checkboxes at DOC and RTF versions shows clearly, when compared against PDF version. On the DOC version that leads also to incorrect text layout because "cm" does not fit any more to the same line. Interestingly RTF does not suffer from this, even though checkboxes appear to be similar size at DOC and RTF versions.
Comment 10 Ari Latvala 2017-07-30 08:48:36 UTC
Problem still exist on the latest LO 5.4.0.3 at Windows 10 64-bit Creators update. When checkbox i.e. on DOC-version is 9 points, in RTF version it is 12 points. Attached checkboxes.JPG screenshot comparing DOC on left and RTF at right side from astutusopimus_15.doc and astutusopimus_15.rtf, both attached as well.
Comment 11 Ari Latvala 2017-07-30 08:50:03 UTC
Created attachment 134991 [details]
checkboxes.JPG screenshot comparing DOC and RTF
Comment 12 Ari Latvala 2017-07-30 08:51:05 UTC
Created attachment 134992 [details]
DOC -version having correct checkbox size
Comment 13 Ari Latvala 2017-07-30 08:51:58 UTC
Created attachment 134993 [details]
RTF -version having too big point size for checkboxes
Comment 14 Ari Latvala 2018-06-07 05:33:48 UTC
To be more specific about the problem(s): On RTF version the biggest problem with checkboxes is wrong font type and size. Font should be Arial 9, not Times New Roman 12.

DOC version does not have the font type and size problem, so it is better. However  both DOC and RTF still show too big checkboxes when compared to PDF version even with the correct font and size. This is described on Bug 98199.
Comment 15 Ari Latvala 2018-06-07 06:17:46 UTC
*** Bug 96297 has been marked as a duplicate of this bug. ***
Comment 16 Ari Latvala 2018-11-08 22:16:37 UTC
Problem still valid on LO 6.1.3. BOth RTF and DOC version have problems with checkboxes but they are different.
Comment 17 Ari Latvala 2019-02-12 07:33:29 UTC
On LO 6.2.0.3 for 64-bit Linux checkboxes on the left have wrong font and point size but when checkbox is in the middle of the text, it has correct font and point size.
Comment 18 QA Administrators 2021-02-12 04:15:41 UTC Comment hidden (obsolete)
Comment 19 Tobias Burnus 2021-02-12 08:42:40 UTC
At least for attachment 127081 [details] of duplicated bug 101799, I still see:

(a) In MS Word, the first [x] box is smaller than the second (third is largest)
(b) In LO 6.4, the first box is larger than the second.
Comment 20 Ari Latvala 2021-02-13 12:41:15 UTC
There is still a difference on checkbox size on the latest LibreOffice 7.1 vs. Word. LibreOffice behaves similarly with RTF and DOC version, checkbox is little bit bigger than on Word. 

Added a screenshot of already attached DOC-document showing difference when Zoom level is set to 200% on both programs to highlight the difference. Look at the space between vertical checkboxes. Size difference doesn't seem to affect checkbox location though, so the problem is at least on this document just visual and does not mess the total layout anymore.

Version: 7.1.0.3 (x64) / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded
Comment 21 Ari Latvala 2021-02-13 12:42:38 UTC
Created attachment 169714 [details]
LO 7.1 vs Word checkbox size difference JPG picture
Comment 22 Aron Budea 2021-02-15 05:43:56 UTC
Already in 4.4.0.3, checkboxes weren't imported before.
Comment 23 Gabor Kelemen (Collabora) 2023-12-01 12:58:29 UTC
Created attachment 191178 [details]
Simple reproducer as RTF, with copy-pasted checkboxes
Comment 24 Gabor Kelemen (Collabora) 2023-12-01 13:00:35 UTC
Created attachment 191179 [details]
The Word-made and LO-made PDFs of the reproducer document compared in DiffPDF

When the attached reproducer (which has default settings on the text/checkbox) is exported to PDF with Word 2016 and LO 24.2 master, the DiffPDF tool shows that indeed the boxes are slightly larger in LO.
Comment 25 Commit Notification 2023-12-22 21:24:13 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bece5f05a33ac7ac723b46d455d104930a3b0839

tdf#98321 Checkbox: size like Word

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Buovjaga 2024-01-07 16:46:06 UTC
Can this be closed as fixed?
Comment 27 Commit Notification 2024-01-09 14:18:37 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/dcfb786e5dee09a2ee28df9a4c64e08fef6180f9

tdf#98321 Checkbox: size like Word

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Gabor Kelemen (Collabora) 2024-01-16 10:28:02 UTC
Created attachment 191990 [details]
How the Word/Writer PDF exports look in DiffPDF

When comparing the PDF export in DiffPDF in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 84a3401c28135735c7bbe324eb3642b31c7f26f5
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

I don't see a significant difference anymore.