tdf#98321 Checkbox: size like Word

Display checkboxes imported from docx/rtf in the same size as Word.
Additionally apply font highlighting if available.

Change-Id: Ifea4aebf8c39b6cdd750f3c90e121da0c4131d4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161124
Tested-by: Jenkins
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit bece5f05a33ac7ac723b46d455d104930a3b0839)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161312
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>